--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ httpx = "^0.28.1"
 halo = "^0.0.31"
 pydantic-settings = "^2.10.1"
 fastapi = "^0.115.13"
+tabulate = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
