--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ halo = "^0.0.31"
 pydantic-settings = "^2.10.1"
 fastapi = "^0.115.13"
 tabulate = "^0.9.0"
+prompt-toolkit = "^3.0.51"
 
 [build-system]
 requires = ["poetry-core"]
